Fixed TOC on mobiles

--- a/_sass/main4.scss
+++ b/_sass/main4.scss
@@ -103,10 +103,11 @@ pre {
 
 .docs-sidebar {
     float: left;
-    width: 19.5rem;
-    padding: 0 1.5rem 0 0;
-    @media all and (max-width: 800px), all and (max-device-width: 800px) {
-        width: auto;
+    width: 100%;
+    padding: 0;
+    @media (min-width: 800px) {
+        width: 19.5rem;
+        padding: 0 1.5rem 0 0;
     }
 }
 
